Fixed layout issues with carousel in Product Page top_section

--- a/components/product_page/top_section/product_images_carousel/product_images_carousel_styles.module.scss
+++ b/components/product_page/top_section/product_images_carousel/product_images_carousel_styles.module.scss
@@ -3,7 +3,7 @@
 .carousel_container {
     position: relative;
     width: 100%;
-    padding-bottom: 64px;
+    padding-bottom: 32px;
     // background-color: rgba(red, 0.2);
 
     .carousel_controls {
@@ -18,16 +18,19 @@
 
     .slide_container {
         position: relative;
+        display: flex;
+        flex-direction: column;
         height: 100%;
         padding: 64px;
+        justify-content: center;
 
         @include within_breakpoint($extra_small_breakpoint) {
             padding: unset;
         }
         
-        .product_image {
+        .product_image {            
             width: 100%;
-            height: 100%;
+            height: auto;
             object-fit: contain;
             background-size: contain;
             background-repeat: no-repeat;
